# mari_app

./: .editorconfig  .gitignore  CLAUDE.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/debug/res/values/: strings.xml
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml  network_security_config.xml
backend_api/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend_api/mari_api/: auth.py  main.py  models.py  settings.py
backend_api/mari_api/routes/: artifacts.py  latest.py  releases.py
backend_api/tests/: conftest.py  test_artifacts.py  test_auth.py  test_health.py  test_latest.py  test_releases.py
config/detekt/: detekt.yml
docs/: DEBUG.md  DESIGN_TOKENS.md  IMPLEMENTATION_PLAN.md  MANUAL_TESTS.md  PRD.md
gradle/: libs.versions.toml
guides/: Android_APK_publishing.md  Android_App_building.md  android_emulator_access.md  windows_emulator_visual_testing.md  windows_ssh_access.md
plans/task_properties_n_auto-update/: 01_phase0_groundwork_schema.md  02_phase1_deduplication.md  03_phase2_task_properties.md  04_phase3_daily_nudge.md  05_phase4_backend_publish_api.md  06_phase5_phone_auto_update.md  07_phase6_wear_auto_update.md  08_release_workflow.md  README.md
shared/: build.gradle.kts
wear/: build.gradle.kts
wear/src/main/: AndroidManifest.xml
(+197 files in other folders)
